styles fixed && storybook inited && added new endpoints && bug fixes

--- a/src/pages/Anime/AnimePage/AnimePage.module.scss
+++ b/src/pages/Anime/AnimePage/AnimePage.module.scss
@@ -1,4 +1,5 @@
 .animeWrapper {
+    margin-top: 30px;
 
     div,
     h1,
@@ -27,6 +28,8 @@
 }
 
 .animePlayerWrapper {
+    margin-top: 30px;
+    margin-bottom: 30px;
     display: flex;
     align-items: center;
     justify-self: center;
