--- a/src/hoc/Three/withBackground.module.scss
+++ b/src/hoc/Three/withBackground.module.scss
@@ -1,8 +1,10 @@
 .backgroundWrapper {
     width: 100vw;
     height: 100vh;
+    overflow: auto;
 
-    background:
-        url("https://www.pixelstalk.net/wp-content/uploads/2016/08/Sky-Scenery-1920x1080-Wallpaper.jpg") no-repeat center top / cover;
+    // background:
+    //     url("https://www.pixelstalk.net/wp-content/uploads/2016/08/Sky-Scenery-1920x1080-Wallpaper.jpg") no-repeat center top / cover;
+    background-color: rgba($color: #000514, $alpha: 1.0);
     background-size: 100vw 100vh;
 }
