--- a/src/pages/Main/AnimeList/AnimeList.module.scss
+++ b/src/pages/Main/AnimeList/AnimeList.module.scss
@@ -1,12 +1,50 @@
 .animeListWrapper {
-    overflow-x: auto;
-    height: 100vh;
-    width: 100vw;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    overflow-x: hidden;
+    height: min-content;
+    width: 100%;
+
+    >div {
+        height: min-content;
+    }
 
     user-select: none;
     -ms-user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
+
+    p {
+        font-size: 24px;
+        line-height: 28px;
+        font-weight: 700;
+        font-style: normal;
+        color: white;
+    }
+}
+
+.popoverContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    button {
+        width: 100%;
+        display: flex;
+        border: transparent;
+        background: transparent;
+
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+
+        :last-child {
+            width: 100%;
+            text-align: center;
+        }
+    }
 }
 
 .animeListWrapper::-webkit-scrollbar {
@@ -27,7 +65,7 @@
 }
 
 .animeListContainer {
-    padding: 40px;
+    padding: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,5 +75,16 @@
         text-overflow: ellipsis;
         overflow: auto;
         white-space: nowrap;
+    }
+}
+
+.animeListImage {
+    object-position: center center;
+    cursor: pointer;
+    overflow: hidden;
+    border-radius: 20px;
+
+    img {
+        scale: 120%;
     }
 }
